# DepthAwareSegmentation

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: main_config.yaml
configs/dataset/: dataset.yaml
configs/models/: models.yaml
configs/path/: path.yaml
configs/typecheck/: typecheck.yaml
configs/wandb/: wandb.yaml
experiments/: run_setup_01.py  short_tst.py
scripts/: sbatch_template.sh  usefull_commands.md
src/: ConcatModels.py  Config.py  Dataset.py  Evaluate.py  Filters.py  LossFunctions.py  Postprocess.py  Preprocess.py  Train.py  Trainer.py  Visualize.py
